force-app/main/default/objects/FulfillmentOrder__c/FulfillmentOrder__c.object-meta.xml
<CustomObject>
    <label>납품서</label>
    <nameField>
        <displayFormat>FO{YYYYMMDD}-{00000}</displayFormat>
        <label>FO No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>