force-app/main/default/objects/FulfillmentOrder__c/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fulfillment Order</relationshipLabel>
    <relationshipName>Fulfillment_Order</relationshipName>
    <type>Lookup</type>
</CustomField>