force-app/main/default/objects/FulfillmentOrder__c/fields/DeliveryMethod__c.field-meta.xml
<CustomField>
    <fullName>DeliveryMethod__c</fullName>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>선박</fullName>
            </value>
            <value>
                <fullName>항공기</fullName>
            </value>
            <value>
                <fullName>철도</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>