force-app/main/default/objects/FulfillmentOrder__c/fields/EndCustomerAddress__c.field-meta.xml
<CustomField>
    <fullName>EndCustomerAddress__c</fullName>
    <label>End Customer Address</label>
    <type>Address</type>
</CustomField>