force-app/main/default/objects/FulfillmentOrder__c/fields/FulfilledAddress__c.field-meta.xml
<CustomField>
    <fullName>FulfilledAddress__c</fullName>
    <label>Fulfilled Address</label>
    <type>Address</type>
</CustomField>