force-app/main/default/objects/FulfillmentOrder__c/fields/FulfilledFromLocationID__c.field-meta.xml
<CustomField>
    <fullName>FulfilledFromLocationID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fulfilled From Location ID</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Fulfillment Order</relationshipLabel>
    <relationshipName>Fulfillment_Order</relationshipName>
    <type>Lookup</type>
</CustomField>