force-app/main/default/objects/FulfillmentOrder__c/fields/FulfilledToCity__c.field-meta.xml
<CustomField>
    <fullName>FulfilledToCity__c</fullName>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>