force-app/main/default/objects/FulfillmentOrder__c/fields/FulfilledToCountry__c.field-meta.xml
<CustomField>
    <fullName>FulfilledToCountry__c</fullName>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>