force-app/main/default/objects/FulfillmentOrder__c/fields/FulfilledToEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>FulfilledToEmailAddress__c</fullName>
    <label>Fulfilled To Email Address</label>
    <type>Email</type>
</CustomField>