force-app/main/default/objects/FulfillmentOrder__c/fields/FulfilledToPhone__c.field-meta.xml
<CustomField>
    <fullName>FulfilledToPhone__c</fullName>
    <label>Fulfilled To Phone</label>
    <type>Phone</type>
</CustomField>