force-app/main/default/objects/FulfillmentOrder__c/fields/FulfilledToPostalCode__c.field-meta.xml
<CustomField>
    <fullName>FulfilledToPostalCode__c</fullName>
    <label>Zip</label>
    <length>40</length>
    <type>Text</type>
</CustomField>