force-app/main/default/objects/FulfillmentOrder__c/fields/FulfilledToState__c.field-meta.xml
<CustomField>
    <fullName>FulfilledToState__c</fullName>
    <label>State/Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>