force-app/main/default/objects/FulfillmentOrder__c/fields/FulfilledToStreet__c.field-meta.xml
<CustomField>
    <fullName>FulfilledToStreet__c</fullName>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>