force-app/main/default/objects/FulfillmentOrder__c/fields/IsReship__c.field-meta.xml
<CustomField>
    <fullName>IsReship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reship</label>
    <type>Checkbox</type>
</CustomField>