force-app/main/default/objects/FulfillmentOrder__c/fields/IsSuspended__c.field-meta.xml
<CustomField>
    <fullName>IsSuspended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Suspended</label>
    <type>Checkbox</type>
</CustomField>