force-app/main/default/objects/FulfillmentOrder__c/fields/OrderID__c.field-meta.xml
<CustomField>
    <fullName>OrderID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order ID</label>
    <referenceTo>GfOrder__c</referenceTo>
    <relationshipLabel>Fulfillment Order</relationshipLabel>
    <relationshipName>Fulfillment_Order</relationshipName>
    <type>Lookup</type>
</CustomField>