force-app/main/default/objects/FulfillmentOrder__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>초안</fullName>
            </value>
            <value>
                <fullName>배정됨</fullName>
            </value>
            <value>
                <fullName>할당됨</fullName>
            </value>
            <value>
                <fullName>픽앤팩</fullName>
            </value>
            <value>
                <fullName>처리됨</fullName>
            </value>
            <value>
                <fullName>취소됨</fullName>
            </value>
            <value>
                <fullName>거부됨</fullName>
            </value>
            <value>
                <fullName>인쇄됨</fullName>
            </value>
            <value>
                <fullName>피킹 완료</fullName>
            </value>
            <value>
                <fullName>패킹 완료</fullName>
            </value>
            <value>
                <fullName>Allocated</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>