force-app/main/default/objects/FulfillmentOrder__c/fields/TaxLocaleType__c.field-meta.xml
<CustomField>
    <fullName>TaxLocaleType__c</fullName>
    <label>Tax Locale Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>TaxFree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>