force-app/main/default/objects/FulfillmentOrder__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Receipt Place</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>창고</fullName>
            </value>
            <value>
                <fullName>리테일 매장</fullName>
            </value>
            <value>
                <fullName>매장 수령</fullName>
            </value>
            <value>
                <fullName>공급자</fullName>
            </value>
            <value>
                <fullName>다운로드</fullName>
            </value>
            <value>
                <fullName>이메일</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>