force-app/main/default/objects/FulfillmentOrder__c/fields/TypeCategory__c.field-meta.xml
<CustomField>
    <fullName>TypeCategory__c</fullName>
    <label>Type Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PHYSICAL</fullName>
            </value>
            <value>
                <fullName>DROPSHIP</fullName>
            </value>
            <value>
                <fullName>DIGITAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>